# wildriver

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  circle.yml  configure  doxygen.conf  packagecore.yaml
doc/: index.md
examples/: CMakeLists.txt  size.c
include/: wildriver.h
src/: .gitignore  CMakeLists.txt  CSRDecoder.cpp  CSRDecoder.hpp  CSREncoder.cpp  CSREncoder.hpp  CSRFile.cpp  CSRFile.hpp  CSRParser.cpp  CSRParser.hpp  CoordinateWriter.cpp  CoordinateWriter.hpp  DenseMatrixFile.cpp  DenseMatrixFile.hpp  Exception.hpp  GraphFactory.cpp  GraphFactory.hpp  GraphFile.cpp  GraphFile.hpp  GraphInHandle.cpp  GraphMatrixReader.cpp  GraphMatrixReader.hpp  GraphMatrixWriter.cpp  GraphMatrixWriter.hpp  GraphOutHandle.cpp  GraphOutHandle.hpp  GraphReaderFactory.cpp  GraphReaderFactory.hpp  GraphTextFile.hpp  GraphWriterFactory.cpp  GraphWriterFactory.hpp  IDenseMatrixFile.hpp  IDenseMatrixReader.hpp  IDenseMatrixWriter.hpp  IGraphReader.hpp  IGraphWriter.hpp  IMatrixFile.hpp  IMatrixReader.hpp  IMatrixWriter.hpp  IRowMatrixReader.hpp  (+49 more)
src/test/: CMakeLists.txt  CSRFile_test.cpp  DomTest.hpp  GraphInHandle_test.cpp  GraphOutHandle_test.cpp  MatrixInHandle_test.cpp  MatrixMarketFile_test.cpp  MatrixOutHandle_test.cpp  MetisFile_test.cpp  PlainVectorFile_test.cpp  SNAPFile_test.cpp  TextFile_test.cpp  Util_test.cpp  Util_test.hpp  WildRiver_test.cpp
